comparison/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_envoyproxy_io

  clusters:
    - name: service_envoyproxy_io
      type: STRICT_DNS
      load_assignment:
        cluster_name: service_envoyproxy_io
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: upstream1
                      port_value: 8080
              - endpoint:
                  address:
                    socket_address:
                      address: upstream2
                      port_value: 8080
              - endpoint:
                  address:
                    socket_address:
                      address: upstream3
                      port_value: 8080
              - endpoint:
                  address:
                    socket_address:
                      address: upstream4
                      port_value: 8080
              - endpoint:
                  address:
                    socket_address:
                      address: upstream5
                      port_value: 8080
